changing color of heading text for contrast issue

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -115,7 +115,7 @@ html, body, form, nav, ul, div {
 			text-align: left;
 			padding: 30px 30px 0 30px;
 			margin: 0;
-			color: $primary-orange;
+			color: #000;
 		}
 	}
 	.database {
